--- a/scripts/conf/netdata/wmi.conf
+++ b/scripts/conf/netdata/wmi.conf
@@ -6,10 +6,28 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 04/10/2022
-# Data de atualização: 04/10/2022
-# Versão: 0.01
+# Data de atualização: 09/10/2022
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Netdata v1.32.x
+#
+# O recurso do Monitoramento do Sistema Operacional Microsoft só funciona se
+# você instalar e configurar o recurso do Prometheus Windowx Exporter e fazer
+# a configuração da exportar dos dados para o Netdata.
+#
+# Link de download do Prometheus Windows Exporter versão MSI:
+# URL: https://github.com/prometheus-community/windows_exporter/releases
+#
+# Opções que devem ser habilitadas no Prometheus Windows Exporter para que o
+# Netdata monitore o Windows.
+# OBSERVAÇÃO IMPORTANTE: fazer a instalação do Prometheus Windows Exporter
+# utilizando o Microsoft Powershell em modo Administrador
+# Comando: msiexec -i  windows_exporter-0.20.0-amd64.msi ENABLED_COLLECTORS=cpu,memory,net,logical_disk,os,system,logon,thermalzone
+#
+# Porta padrão utilizada pelo Prometheus Windows Exporter: 9182
+# Comando: netstat -an
+#
+# Localização do script WMI do Netdata: /usr/lib/netdata/conf.d/go.d/
 #
 # Configuração do Job de monitoramento do Prometheus Windows Exporter
 #
