--- a/scripts/conf/netdata/wmi.conf
+++ b/scripts/conf/netdata/wmi.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 04/10/2022
-# Data de atualização: 09/10/2022
-# Versão: 0.02
+# Data de atualização: 19/10/2022
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Netdata v1.32.x
 #
@@ -19,10 +19,10 @@
 # URL: https://github.com/prometheus-community/windows_exporter/releases
 #
 # Opções que devem ser habilitadas no Prometheus Windows Exporter para que o
-# Netdata monitore o Windows.
+# Netdata Agent monitore o Sistema Operacional Microsoft Windows.
 #
 # OBSERVAÇÃO IMPORTANTE: fazer a instalação do Prometheus Windows Exporter
-# utilizando o Microsoft Powershell em modo Administrador
+# utilizando o Microsoft Powershell em modo Administrador.
 #
 # Comando: msiexec -i windows_exporter-0.20.0-amd64.msi ENABLED_COLLECTORS=cpu,memory,net,logical_disk,os,system,logon,thermalzone
 #
@@ -30,10 +30,14 @@
 # Comando: netstat -an
 #
 # Localização do script WMI do Netdata: /usr/lib/netdata/conf.d/go.d/
+# Comando: cp -v wmi.conf /usr/lib/netdata/conf.d/go.d/
 #
-# Configuração do Job de monitoramento do Prometheus Windows Exporter
+# Reinicializar o serviços do Netdata.
+# Comando: sudo systemctl restart netdata
 #
-# Alterar o nome e url do Prometheus Windows Exporter conforme o seu cenário
+# Configuração do Job de monitoramento do Prometheus Windows Exporter.
+#
+# Alterar o nome e url do Prometheus Windows Exporter conforme o seu cenário.
 jobs:
   - name: ptispo01dt002
     url: http://172.16.1.104:9182/metrics
