--- a/scripts/conf/ntp/timesyncd.conf
+++ b/scripts/conf/ntp/timesyncd.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 17/10/2021
-# Data de atualização: 24/03/2022
-# Versão: 0.02
+# Data de atualização: 23/04/2023
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do NTP Server v4.2.
 #
@@ -18,5 +18,5 @@
 # mais o arquivo: timesyncd.conf para sincronizar a Data e Hora, sendo substituido
 # pelo arquivo ntp.conf.
 [Time]
-NTP=a.st1.ntp.br b.st1.ntp.br c.st1.ntp.br d.st1.ntp.br gps.ntp.br
+NTP=200.160.7.186 201.49.148.135 200.186.125.195 200.20.186.76 
 FallbackNTP=a.ntp.br b.ntp.br c.ntp.br
