--- a/scripts/conf/guacamole/guacamole.properties
+++ b/scripts/conf/guacamole/guacamole.properties
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 03/12/2021
-# Data de atualização: 12/07/2022
-# Versão: 0.04
+# Data de atualização: 28/04/2023
+# Versão: 0.05
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache Guacamole Server 1.5.x e Cliente 1.5.x
 
@@ -18,10 +18,11 @@ guacd-hostname: localhost
 guacd-port: 4822
 #
 # Configuração do Protocolo de Autenticação Básica do Guacamole Server, utilizando o
-# arquivo de mapeamento de usuários: user-mapping.xml
+# arquivo de mapeamento de usuários: user-mapping.xml - DESATIVADO NESSE CURSO
 #auth-provider: net.sourceforge.guacamole.net.basic.BasicFileAuthenticationProvider
 #
 # Localização do arquivo de Mapeamento dos Usuários de Acesso Remoto do Guacamole Server
+# utilizando o arquivo de usuários: user-mapping.xml - DESATIVADO NESSE CURSO
 #user-mapping: /etc/guacamole/user-mapping.xml
 #
 # Configuração do Conector JDBC do MySQL Server utilizado pelo Guacamole Server
@@ -30,3 +31,9 @@ mysql-port: 3306
 mysql-database: guacamole
 mysql-username: guacamole
 mysql-password: guacamole
+#
+# Configuração do Conector TOTP two-factor authentication utilizado pelo Guacamole Server
+#totp-issuer: vaamonde
+#totp-digits: 6
+#totp-period: 30
+#38 totp-mode: sha1
