--- a/scripts/conf/netdata/wmi.conf
+++ b/scripts/conf/netdata/wmi.conf
@@ -12,7 +12,7 @@
 # Testado e homologado para a versão do Netdata v1.32.x
 #
 # O recurso do Monitoramento do Sistema Operacional Microsoft só funciona se
-# você instalar e configurar o recurso do Prometheus Windowx Exporter e fazer
+# você instalar e configurar o recurso do Prometheus Windows Exporter e fazer
 # a configuração da exportar dos dados para o Netdata.
 #
 # Link de download do Prometheus Windows Exporter versão MSI:
