--- a/scripts/conf/prometheus/prometheus.yml
+++ b/scripts/conf/prometheus/prometheus.yml
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 04/02/2022
-# Data de atualização: 04/02/2022
-# Versão: 0.01
+# Data de atualização: 01/05/2023
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 #
 # Configurações Globais do Prometheus
@@ -22,7 +22,7 @@ alerting:
         - targets:
           # - alertmanager:9093
 #
-# Configuração do Carregamento das Regras Periódica do Prometheus 
+# Configuração do Carregamento das Regras Periódicas do Prometheus 
 rule_files:
   # - "first_rules.yml"
   # - "second_rules.yml"
@@ -33,3 +33,9 @@ scrape_configs:
   - job_name: "prometheus"
     static_configs:
       - targets: ["localhost:9091"]
+# - job_name: "linuxmint"
+#   static_configs:
+#     - targets: ["ptispo01dt001:9100"]
+# - job_name: "windows10"
+#   static_configs:
+#     - targets: ["ptispo01dt002:9100"]
