--- a/scripts/conf/grafana/grafana.ini
+++ b/scripts/conf/grafana/grafana.ini
@@ -6,10 +6,10 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 11/12/2021
-# Data de atualização: 11/12/2021
-# Versão: 0.01
+# Data de atualização: 01/05/2023
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do Grafana Server v9.1.x
+# Testado e homologado para a versão do Grafana Server v9.5.x
 #
 #################################### Server ####################################
 [server]
@@ -30,7 +30,7 @@
 ;domain = pti.intra
 
 # CONFIGURAÇÃO PADRÃO DO GRAFANA - RECOMENDADO NÃO ALTERAR AS OPÇÕES, SOMENTE SE VOCÊ 
-# LEU A DOCUMENTAÇÃO DO PROJETO, POR PADRÃO O GRAFANA SERVER IRÁ UTILIZAR AS TODAS AS
+# LEU A DOCUMENTAÇÃO DO PROJETO, POR PADRÃO  O  GRAFANA SERVER IRÁ UTILIZAR TODAS AS
 # CONFIGURAÇÕES BÁSICAS PARA O SEU FUNCIONAMENTO
 
 #################################### Server #######################################
