--- a/scripts/conf/prometheus/prometheus.yml
+++ b/scripts/conf/prometheus/prometheus.yml
@@ -27,8 +27,13 @@ rule_files:
   # - "first_rules.yml"
   # - "second_rules.yml"
 #
+# Configuração do suporte ao TLS/SSL HTTPS do Prometheus
+#tls_server_config:
+#  cert_file: /etc/ssl/newcerts/prometheus.crt
+#  key_file: /etc/ssl/private/prometheus.key
+#
 # Configurações do Serviço do Prometheus (alterado a Porta para 9091 para não entrar
-# em conflito com o serviço do OpenFire, porta padrão do Prometheus 9090)
+# em conflito com o serviço do OpenFire, porta padrão do Prometheus é a 9090)
 scrape_configs:
   - job_name: "prometheus"
     static_configs:
