--- a/scripts/conf/guacamole/guacamole.properties
+++ b/scripts/conf/guacamole/guacamole.properties
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 03/12/2021
-# Data de atualização: 28/04/2023
-# Versão: 0.05
+# Data de atualização: 06/05/2023
+# Versão: 0.06
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache Guacamole Server 1.5.x e Cliente 1.5.x
 
@@ -26,6 +26,8 @@ guacd-port: 4822
 #user-mapping: /etc/guacamole/user-mapping.xml
 #
 # Configuração do Conector JDBC do MySQL Server utilizado pelo Guacamole Server
+# Necessário utilizar MySQL Connector Java e fazer a criação do Banco de Dados
+# Necessário utilziar o Pluguin: guacamole-auth-jdbc no diretório: /etc/guacamole/extensions/
 mysql-hostname: localhost
 mysql-port: 3306
 mysql-database: guacamole
@@ -33,6 +35,7 @@ mysql-username: guacamole
 mysql-password: guacamole
 #
 # Configuração do Conector TOTP two-factor authentication utilizado pelo Guacamole Server
+# Necessário utilizar o Pluguin: guacamole-auth-totp no diretório: /etc/guacamole/extensions/
 #totp-issuer: vaamonde
 #totp-digits: 6
 #totp-period: 30
