--- a/scripts/conf/guacamole/guacamole.properties
+++ b/scripts/conf/guacamole/guacamole.properties
@@ -7,7 +7,7 @@
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 03/12/2021
 # Data de atualização: 06/05/2023
-# Versão: 0.06
+# Versão: 0.07
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache Guacamole Server 1.5.x e Cliente 1.5.x
 
@@ -40,3 +40,14 @@ mysql-password: guacamole
 #totp-digits: 6
 #totp-period: 30
 #38 totp-mode: sha1
+#
+# Configuração do Recording Storage and Playback Works utilizado pela Guacamole Server
+# Necessário utilizar o Plugin: guacamole-history-recording-storage no diretório: /etc/guacamole/extensions/
+# Localização padrão das gravações: /var/lib/guacamole/recordings
+# Permissão padrão da localização: chown guacd:tomcat e chmod 2750
+# Variáveis padrão utilizadas na configuração da gravação:
+# ${HISTORY_UUID} = indenticação única da gravação
+# ${HISTORY_PATH} = caminho da localização da gravação
+# ${GUAC_DATE} = variável de data
+# ${GUAC_TIME} = variável de hora
+#recording-search-path: /var/lib/guacamole/recordings
