--- a/scripts/conf/ansible/rundeck-config.properties
+++ b/scripts/conf/ansible/rundeck-config.properties
@@ -6,35 +6,46 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 16/12/2021
-# Data de atualização: 12/01/2022
-# Versão: 0.02
+# Data de atualização: 18/06/2023
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do Ansible v2.10.x e do Rundeck v4.4.x
+# Testado e homologado para a versão do Ansible v2.12.x e do Rundeck v4.13.x
 #
 # Configuração do endereço IPv4 e Porta de Conexão do Servidor Ubuntu que está 
 # rodando o Rundeck, por padrão as configurações do Rundeck só responde para o 
 # endereço de Loopback
-grails.serverURL=http://172.16.1.20:4440
+grails.serverURL=http://pti.intra:4440
 #
 # Configuração padrão do Rundeck, recomendado não alterar os valores abaixo, 
 # somente se você leu o manual de customização e configuração avançada do Rundeck.
+#
+#loglevel.default is the default log level for jobs: ERROR,WARN,INFO,VERBOSE,DEBUG
 loglevel.default=INFO
 rdeck.base=/var/lib/rundeck
+#
+#rss.enabled if set to true enables RSS feeds that are public (non-authenticated)
 rss.enabled=false
-dataSource.dbCreate = update
-dataSource.url = jdbc:h2:file:/var/lib/rundeck/data/rundeckdb;MVCC=true
+#
+# change data source
+dataSource.dbCreate = none
+dataSource.url = jdbc:h2:file:/var/lib/rundeck/data/rundeckdb;DB_CLOSE_ON_EXIT=FALSE;NON_KEYWORDS=MONTH,HOUR,MINUTE,YEAR,SECONDS
+grails.plugin.databasemigration.updateOnStart=true
+#
+# Encryption for key storage
 rundeck.storage.provider.1.type=db
 rundeck.storage.provider.1.path=keys
 rundeck.storage.converter.1.type=jasypt-encryption
 rundeck.storage.converter.1.path=keys
 rundeck.storage.converter.1.config.encryptorType=custom
-rundeck.storage.converter.1.config.password=e740f991881442a1
+rundeck.storage.converter.1.config.password=742fe5cb0f3c8c07
 rundeck.storage.converter.1.config.algorithm=PBEWITHSHA256AND128BITAES-CBC-BC
 rundeck.storage.converter.1.config.provider=BC
+#
+# Encryption for project config storage
 rundeck.projectsStorageType=db
 rundeck.config.storage.converter.1.type=jasypt-encryption
 rundeck.config.storage.converter.1.path=projects
-rundeck.config.storage.converter.1.config.password=e740f991881442a1
+rundeck.config.storage.converter.1.config.password=742fe5cb0f3c8c07
 rundeck.config.storage.converter.1.config.encryptorType=custom
 rundeck.config.storage.converter.1.config.algorithm=PBEWITHSHA256AND128BITAES-CBC-BC
 rundeck.config.storage.converter.1.config.provider=BC
